# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: my_workflow.yml
python-project-52/: Makefile  pyproject.toml
python-project-52/task_manager/: settings.py  urls.py
statuses/: apps.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: middlaware.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  test_statuses.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  status_forms.py  test_tasks.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html  layout.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  test_users.py  tests.py  urls.py  views.py
tasks/: admin.py  models.py
tasks/migrations/: 0001_initial.py  0002_alter_task_status.py
templates/: base.html  index.html
templates/statuses/: confirm_delete.html  form.html  list.html
templates/users/: confirm_delete.html  form.html  list.html  login.html
users/: tests.py  urls.py  views.py
(+12 files in other folders)
